--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/2.gif") top right no-repeat;
+  background: #040404 url("../img/FONDOFINAL_Mesa\ de\ trabajo\ 1.png") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -213,7 +213,7 @@ p{
 }
 
 .mobile-nav-toggle i {
-  color: #fff;
+  color: #000;
 }
 
 .mobile-nav {
@@ -224,7 +224,7 @@ p{
   left: 15px;
   z-index: 9999;
   overflow-y: auto;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(255,255, 255, 0.7);
   transition: ease-in-out 0.2s;
   opacity: 0;
   visibility: hidden;
@@ -242,14 +242,14 @@ p{
 .mobile-nav a {
   display: block;
   position: relative;
-  color: #fff;
+  color: #000;
   padding: 10px 20px;
   font-weight: 500;
   outline: none;
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #18d26e;
+  color: #66ccff;
   text-decoration: none;
 }
 
@@ -383,7 +383,7 @@ section .container {
 }
 
 /*--------------------------------------------------------------
-# About
+# }t
 --------------------------------------------------------------*/
 .about-me{
   border-top-left-radius: 20px;
